api_getwaye/config/envoy.yaml
static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/sayhello"
                route:
                  cluster: grpc_service
                  timeout: 5s
                  retry_policy:
                    retry_on: 5xx
              cors:
                allow_origin_string_match:
                  - prefix: "*"
                allow_methods: GET, POST, OPTIONS
                allow_headers: keep-alive, user-agent, cache-control, content-type
          http_filters:
          - name: envoy.filters.http.router

  clusters:
  - name: grpc_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: grpc_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: grpc_server
                port_value: 50051
